automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <html>
 <head>
   <meta charset="UTF-8">
-  <title>HTML ISSUE BOT 9000</title>
+  <title>HTML ISSUE BOT 9000</title></head>
 
 <body>
   <h1>HTML ISSUE BOT 9000 - Checks for Issues</h1>
@@ -14,7 +15,7 @@
   <p>3:15pm Rewire Electrical Outlets in High School Classroom.</p>
   <p>4:30pm Issue Bot Lithium-Ion Battery charge, initiate nap sequence on quad couches.</p>
 
-  <h2>Issue Bot Tasks</h3>
+  <h3>Issue Bot Tasks</h3>
 
   <li>
     <ul>Debug Ruby Labs
@@ -23,12 +24,11 @@
     <ul>Take out trash</ul>
   </li>
 
-  <h2 Issue Bot Camera Capture Archive</h2>
+  <h2>Issue Bot Camera Capture Archive</h2>
 
   <img src="images/adam.jpg">
   <img src="images/adam.jpg" alt="Avi">
   <img src="images/spencer.jpg" alt="Spencer" target="_blank">
 
-</body>
 </html>
-</head>
+</body>
