automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <html>
 <head>
   <meta charset="UTF-8">
-  <title>HTML ISSUE BOT 9000</title></head>
+  <title>HTML ISSUE BOT 9000</title>
+  </head>
 
 <body>
   <h1>HTML ISSUE BOT 9000 - Checks for Issues</h1>
@@ -18,11 +19,11 @@
   <h3>Issue Bot Tasks</h3>
 
   <li>
-    <ul>Debug Ruby Labs
+    <ul>Debug Ruby Labs</ul>
     <ul>Massage Joe's Back</ul>
-    <ul>Archive Steph's Gif collection<ul>
+    <ul>Archive Steph's Gif collection</ul>
     <ul>Take out trash</ul>
-  </li>
+    </li>
 
   <h2>Issue Bot Camera Capture Archive</h2>
 
@@ -30,5 +31,5 @@
   <img src="images/adam.jpg" alt="Avi">
   <img src="images/spencer.jpg" alt="Spencer" target="_blank">
 
-</html>
 </body>
+</html>
